登录接口校验

--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -4,9 +4,17 @@ zh-CN:
       # rails自带错误提示信息的国际化
       message:
         invalid: 格式不正确
+        blank: 必填
+        not_found: 找不到对应的记录
       # 针对不同model的错误提示国际化
       models:
         validation_code:
           attributes:
             email:
               invalid: 邮件地址格式不正确
+  activemodel:
+    errors:
+      messages:
+        invalid: 格式不正确
+        blank: 必填
+        not_found: 找不到对应的记录
